# merge-train

./: .gitignore  CASCADE_ENGINE_PLAN.md  CLAUDE.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  LICENCE.md  README.md  SQLITE_MIGRATION_PLAN.md  flake.nix
.github/workflows/: ci.yml
examples/: github_integration_test.rs
proptest-regressions/cascade/: recovery.txt  step.txt
proptest-regressions/effects/: git.txt  github.txt
proptest-regressions/git/: property_tests.txt
proptest-regressions/persistence/: compaction.txt  log.txt  pruning.txt  recovery.txt
proptest-regressions/spool/: delivery.txt
proptest-regressions/state/: transitions.txt
proptest-regressions/types/: train.txt
proptest-regressions/webhooks/: priority.txt
scripts/: sandboxed-test.sh
src/: lib.rs  main.rs  test_utils.rs
src/cascade/: conformance_tests.rs  engine.rs  engine_tests.rs  mod.rs  model_tests.rs  observe.rs  phases.rs  plan.rs  recovery.rs  step.rs  step_tests.rs
src/commands/: mod.rs  parser.rs  types.rs
src/effects/: git.rs  github.rs  interpreter.rs  mod.rs
src/git/: interpreter.rs  merge.rs  mod.rs  property_tests.rs  push.rs  recovery.rs  test_support.rs  worktree.rs
src/github/: client.rs  error.rs  interpreter.rs  mod.rs  retry.rs
src/persistence/: compaction.rs  event.rs  fsync.rs  generation.rs  log.rs  mod.rs  pruning.rs  recovery.rs  snapshot.rs
src/preflight/: branch_protection.rs  merge_method.rs  mod.rs
src/server/: health.rs  mod.rs  state.rs  webhook.rs
src/spool/: dedupe.rs  delivery.rs  drain.rs  mod.rs
src/state/: descendants.rs  mod.rs  (+4 more)
(+28 files in other folders)
