[package]
name = "merge-train"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# GitHub API
octocrab = "0.44"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# File locking
fs2 = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[[example]]
name = "github_integration_test"
path = "examples/github_integration_test.rs"
